assets/css/styles.css
/* ... */
.rounded-l-lg {
  border-top-left-radius: 0.5rem;
  border-bottom-left-radius: 0.5rem;
}

.rounded-l-md {
  border-top-left-radius: 0.375rem;
  border-bottom-left-radius: 0.375rem;
}

.rounded-r-lg {
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}

.rounded-r-md {
  border-top-right-radius: 0.375rem;
  border-bottom-right-radius: 0.375rem;
}

.rounded-s-lg {
  border-start-start-radius: 0.5rem;
  border-end-start-radius: 0.5rem;
}

.border-2 {
  border-width: 2px;
}

.border-dashed {
  border-style: dashed;
}

.border-none {
  border-style: none;
}

.bg-error-base {
  --tw-bg-opacity: 1;
  background-color: rgb(241 138 167 / var(--tw-bg-opacity));
}

.bg-gray-200 {
  --tw-bg-opacity: 1;
  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
}

.bg-primary {
  --tw-bg-opacity: 1;
  background-color: rgb(37 36 52 / var(--tw-bg-opacity));
}

.bg-primary-accent {
  --tw-bg-opacity: 1;
  background-color: rgb(45 44 60 / var(--tw-bg-opacity));
}

.bg-secondary-500 {
  --tw-bg-opacity: 1;
  background-color: rgb(16 185 129 / var(--tw-bg-opacity));
}

.bg-secondary-normal {
  --tw-bg-opacity: 1;
  background-color: rgb(138 194 240 / var(--tw-bg-opacity));
}

.bg-terminal-base {
  --tw-bg-opacity: 1;
  background-color: rgb(30 29 45 / var(--tw-bg-opacity));
}

.bg-transparent {
  background-color: transparent;
}

.bg-primary-dark {
  --tw-bg-opacity: 1;
  background-color: rgb(25 24 40 / var(--tw-bg-opacity));
}

.stroke-current {
  stroke: currentColor;
}

.p-4 {
  padding: 1rem;
}

.p-6 {
  padding: 1.5rem;
}

.px-2 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.px-4 {
  padding-left: 1rem;
  padding-right: 1rem;
}

.py-2 {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.py-4 {
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.py-8 {
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.pb-16 {
  padding-bottom: 4rem;
}

.pl-4 {
  padding-left: 1rem;
}

.pt-16 {
  padding-top: 4rem;
}

.pt-4 {
  padding-top: 1rem;
}

.font-nvim {
  font-family: JetBrainsMono, Nerd Font, Monospace;
}

.text-3xl {
  font-size: 1.875rem;
  line-height: 2.25rem;
}

.text-lg {
  font-size: 1.125rem;
  line-height: 1.75rem;
}

.text-xl {
  font-size: 1.25rem;
  line-height: 1.75rem;
}

.text-xs {
  font-size: 0.75rem;
  line-height: 1rem;
}

.font-bold {
  font-weight: 700;
}

.uppercase {
  text-transform: uppercase;
}

.leading-6 {
  line-height: 1.5rem;
}

.leading-9 {
  line-height: 2.25rem;
}

.leading-normal {
  line-height: 1.5;
}

.leading-tight {
  line-height: 1.25;
}

.tracking-tight {
  letter-spacing: -0.025em;
}

.tracking-tighter {
  letter-spacing: -0.05em;
}

.text-base-content {
  --tw-text-opacity: 1;
  color: var(--fallback-bc,oklch(var(--bc)/var(--tw-text-opacity)));
}

.text-gray-500 {
  --tw-text-opacity: 1;
  color: rgb(107 114 128 / var(--tw-text-opacity));
}

.text-primary {
  --tw-text-opacity: 1;
  color: rgb(37 36 52 / var(--tw-text-opacity));
}

.text-syntax-class {
  --tw-text-opacity: 1;
  color: rgb(145 195 153 / var(--tw-text-opacity));
}

.text-syntax-content {
  --tw-text-opacity: 1;
  color: rgb(200 116 143 / var(--tw-text-opacity));
}

.text-syntax-function {
  --tw-text-opacity: 1;
  color: rgb(136 178 247 / var(--tw-text-opacity));
}

.text-syntax-tag {
  --tw-text-opacity: 1;
  color: rgb(215 198 162 / var(--tw-text-opacity));
}

.text-syntax-templ {
  --tw-text-opacity: 1;
  color: rgb(201 164 245 / var(--tw-text-opacity));
}

.text-white {
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

.shadow-lg {
  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

@keyframes blink {
  0%,25%,to {
    opacity: 1
  }

  50%,75% {
    opacity: 0
  }
}

.animate-blink {
  animation: blink 1.45s infinite step-start
}

@keyframes shake {
  0% {
    transform: translate(0)
  }

  6.5% {
    transform: translate(-4px) rotateY(-9deg)
  }

  18.5% {
    transform: translate(3px) rotateY(7deg)
  }

  31.5% {
    transform: translate(-1px) rotateY(-5deg)
  }

  43.5% {
    transform: translate(2px) rotateY(3deg)
  }

  50% {
    transform: translate(0)
  }
}

.animate-shake {
  animation: shake .52s cubic-bezier(.36,.07,.19,.97) both
}

@keyframes spin {
  to {
    transform: rotate(360deg)
  }
}

@font-face {
  font-family: "geist";

  src: url("./assets/fonts/geist-mono-latin.otf");
}

[data-mode="normal"] {
  --tw-bg-opacity: 1;
  background-color: rgb(138 194 240 / var(--tw-bg-opacity));
}

[data-mode="insert"] {
  --tw-bg-opacity: 1;
  background-color: rgb(199 160 220 / var(--tw-bg-opacity));
}

.hover\:border-l-2:hover {
  border-left-width: 2px;
}

.hover\:bg-primary:hover {
  --tw-bg-opacity: 1;
  background-color: rgb(37 36 52 / var(--tw-bg-opacity));
}

.hover\:bg-terminal-hover:hover {
  --tw-bg-opacity: 1;
  background-color: rgb(37 36 52 / var(--tw-bg-opacity));
}

.hover\:text-white:hover {
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

.focus\:border-l-2:focus {
  border-left-width: 2px;
}

.focus\:pl-\[22px\]:focus {
  padding-left: 22px;
}

.focus\:text-white:focus {
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

.focus\:outline-none:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.focus\:ring-transparent:focus {
  --tw-ring-color: transparent;
}

.active\:border-l-2:active {
  border-left-width: 2px;
}

.active\:pl-\[22px\]:active {
  padding-left: 22px;
}

.has-\[\:focus\]\:border-l-2:has(:focus) {
  border-left-width: 2px;
}

.has-\[\:focus\]\:pl-\[22px\]:has(:focus) {
  padding-left: 22px;
}

.has-\[\:focus\]\:outline-none:has(:focus) {
  outline: 2px solid transparent;
  outline-offset: 2px;
}
/* ... */

